<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hero_data_vis_world_weather_explainer_vid"
    tools:context=".MainScreen">

    <Button
        android:id="@+id/ViewButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="58dp"
        android:layout_marginBottom="224dp"
        android:backgroundTint="@color/hax"
        android:text="@string/viewButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/averagebutton"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/clearButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="227dp"
        android:backgroundTint="@color/hax"
        android:text="@string/clearButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/exitButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="307dp"
        android:layout_marginBottom="100dp"
        android:backgroundTint="@color/hax"
        android:text="@string/exitButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/dayText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="50dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/dayText"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/minNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,TextFields" />

    <TextView
        android:id="@+id/dayTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="114dp"
        android:text="@string/dayTextView"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/dayText"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/minTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="76dp"
        android:text="@string/minTextView"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/maxTextView"
        app:layout_constraintEnd_toStartOf="@+id/minNumber"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/maxTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="64dp"
        android:text="@string/maxTextView"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/weatherTextView"
        app:layout_constraintEnd_toStartOf="@+id/maxNumber"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/weatherTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="68dp"
        android:text="@string/weatherTextView"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/ViewButton"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/minNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="54dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/maxNumber"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="LabelFor,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/maxNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="40dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/weatherText"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/weatherText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="62dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="text"
        android:text="@string/weatherText"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/clearButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/weatherTextView"
        tools:ignore="LabelFor,TextFields,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/averagebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="227dp"
        android:backgroundTint="@color/hax"
        android:text="@string/averageButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/clearButton" />

</androidx.constraintlayout.widget.ConstraintLayout>